# sndfile-enumerators

./: LICENSE  LICENSE-OTHER  iter-audio.cabal  sndfile-enumerators.cabal
examples/: channelized_reader.hs  reader2.hs  wave_reader.hs  wave_writer.hs  writer2.hs  writer4.hs
src/Data/: LICENSE
src/Data/Int/: Int24.hs
src/Sound/: Iteratee.hs
src/Sound/Iteratee/: Base.hs  Channelize.hs  Channelized.hs  ChannelizedVector.hs  Codecs.hs  File.hs  IO.hs  Instances.hs  Utils.hs  Writer.hs
src/Sound/Iteratee/Codecs/: Common.hs  Raw.hs  SupportedFormats.hs  Wave.hs  WaveWriter.hs
src/Sound/Iteratee/Instances/: StorableVector.hs
tests/: testIter-audio.hs
