Name:		iter-audio
Version:        0.3.0
Cabal-Version:  >= 1.2
Description:	encode and decode soundfiles using Iteratees.
                Audio files may be read or written, with classes and 
                data structures to facilitate conversion between different
                formats.  Currently only wave format is supported.
License:	BSD3
License-file:	LICENSE
Author:		John W. Lato, jwlato@gmail.com
Maintainer:	John W. Lato, jwlato@gmail.com
homepage:       http://inmachina.net/~jwlato/haskell/HSoundFile
Stability:	experimental
synopsis:       Audio file reading/writing
category:       Codec, Sound
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC == 6.10.3
extra-source-files: README, LICENSE, examples/wave_reader.hs, examples/wave_writer.hs, src/Data/LICENSE

flag splitBase
  description: Choose the new split-up base package.

Library
 Hs-Source-Dirs:        src
 ghc-options:           -O2 -Wall -fexcess-precision
 if flag(splitBase)
   build-depends:       base >= 3, base < 5
 else
   build-depends:       base < 3
 build-depends:         haskell98, binary >= 0.5 && < 0.6, vector >= 0.4 && < 0.5, containers >= 0.2 && < 0.4, transformers >= 0.1.4 && < 0.2, iteratee >= 0.4 && < 0.5, bytestring >= 0.9.1 && < 0.10, extensible-exceptions >= 0.1 && < 0.2, word24 >= 0.1 && < 0.2, type-level, parallel >= 2 && < 3, deepseq >= 1 && < 2, mutable-iter >= 0.1 && < 0.2, MonadCatchIO-transformers >= 0.0.2 && < 0.1
 extensions:            ExistentialQuantification
                        RankNTypes
                        ScopedTypeVariables
                        MultiParamTypeClasses
                        FlexibleInstances
                        FlexibleContexts
                        UndecidableInstances
 exposed-modules:       Sound.Iteratee
                        Sound.Iteratee.Base
                        Sound.Iteratee.Channelized
                        Sound.Iteratee.Codecs
                        Sound.Iteratee.Codecs.Wave
                        Sound.Iteratee.Codecs.Raw
                        Sound.Iteratee.Writer
 other-modules:         Sound.Iteratee.Codecs.WaveWriter
                        Sound.Iteratee.Codecs.Common

