Name:		sndfile-enumerators
Version:        0.11.0.0
Cabal-Version:  >= 1.2
Description:	encode and decode soundfiles using Iteratees.
                Audio files may be read or written, with classes and 
                data structures to facilitate conversion between different
                formats.  Currently only wave format is supported.
License:	BSD3
License-file:	LICENSE
Author:		John W. Lato, jwlato@gmail.com
Maintainer:	John W. Lato, jwlato@gmail.com
homepage:       http://www.tiresiaspress.us/haskell/sndfile-enumerators
Stability:	experimental
synopsis:       Audio file reading/writing
category:       Codec, Sound
build-type:     Simple
cabal-version:  >= 1.10
tested-with:    GHC == 6.12.3
extra-source-files:
  LICENSE
  examples/wave_reader.hs
  examples/wave_writer.hs
  examples/writer2.hs

flag splitBase
  description: Choose the new split-up base package.

Library
 default-language: Haskell2010
 hs-Source-Dirs:
   src
 ghc-options:
   -Wall
   -O2
 build-depends:
   base                      >= 3     && < 5,
   binary                    >= 0.5   && < 0.8,
   bytestring                >= 0.9.1 && < 0.11,
   containers                >= 0.2   && < 0.6,
   exceptions                >=0.3  && <0.4,
   iterX                     == 0.1.*,
   filepath                  >= 1.0   && < 2.0,
   ListLike                  == 4.*,
   mtl                       >= 2     && < 3,
   transformers              >= 0.2   && < 0.4,
   vector                    >= 0.6   && < 0.11,
   word24                    >= 1     && < 2.0
 exposed-modules:
   Sound.Iteratee
   Sound.Iteratee.Base
   Sound.Iteratee.Codecs
   Sound.Iteratee.Codecs.Wave
   Sound.Iteratee.Codecs.Raw
   Sound.Iteratee.File
   Sound.Iteratee.Utils
   Sound.Iteratee.Writer
 other-modules:
   Sound.Iteratee.Codecs.WaveWriter
   Sound.Iteratee.Codecs.Common


source-repository head
  type:                git
  location:            git://github.com/JohnLato/sndfile-enumerators.git
